[Nandhakumar]/UC9-CountbyCityandState