@@ -6,7 +6,7 @@ import java.util.stream.Collectors;
 public class AddressBookService {
 
     private Map<String, AddressBook> books = new HashMap<>();
-    // Map → store multiple address books
+    // Map → multiple address books (UC6)
 
     public void addAddressBook(String name) {
         books.put(name, new AddressBook());
@@ -23,15 +23,27 @@ public class AddressBookService {
     public List<Contact> searchByCity(String city) {
 
         return books.values().stream()
-                // stream() → process all address books
+                // stream → process all books
 
                 .flatMap(book -> book.getContacts().stream())
-                // flatMap → combine all contact lists into one stream
+                // flatMap → combine all contacts
 
                 .filter(c -> c.getCity().equals(city))
-                // filter → select matching city
+                // filter → search condition
 
-                .collect(Collectors.toList());
-        // collect → convert stream to List
+                .toList();
+        // convert to list (UC8)
+    }
+
+    public Map<String, List<Contact>> groupByCity() {
+
+        return books.values().stream()
+                // stream → process all books
+
+                .flatMap(book -> book.getContacts().stream())
+                // combine all contacts
+
+                .collect(Collectors.groupingBy(Contact::getCity));
+        // groupingBy → group contacts by city (UC9)
     }
 }
